make sure that we pre-wrap the lines of code in the markdown code blocks
git-svn-id: http://svn.osqa.net/svnroot/osqa/trunk@1006 0cfe37f9-358a-4d5e-be75-b63607b5c754

--- a/forum/skins/default/media/style/style.css
+++ b/forum/skins/default/media/style/style.css
@@ -139,6 +139,7 @@ pre {
 code {
     font-family: Consolas, Monaco, Liberation Mono, Lucida Console, Monospace;
     font-size: 100%;
+    white-space: pre-wrap;
 }
 
 blockquote {
